@@ -1,3 +1,8 @@
+Oct 19, 2005
+
+  * ADDED: View/Show roots/... menu to highlight the roots of classes and
+    properties from a specified file.
+
 Oct 18, 2005
 
   * ADDED: rdf-diagram to bind ^L to ->layout
